This change appears to fix a bug that seemed to cause some sort of a timeout in the game play.  I found the fix by decompiling a working jar file.